putting the dockerhub token

--- a/.github/workflows/gitaction.yaml
+++ b/.github/workflows/gitaction.yaml
@@ -10,11 +10,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_NAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push image
         run: |
           docker build -t estuda-app .
-          docker tag estuda-app:latest vitrolagalaxy/estuda-app:latest
-          docker push vitrolagalaxy/estuda-app:latest
+          docker tag estuda-app:latest ${{ vars.DOCKERHUB_NAME }}/estuda-app:latest
+          docker push ${{ vars.DOCKERHUB_NAME }}/estuda-app:latest
 
       # - name: Login to Google Cloud Container Registry (GCR)
       #   uses: google/cloud-sdk@v4
