--- a/.github/workflows/gitaction.yaml
+++ b/.github/workflows/gitaction.yaml
@@ -7,6 +7,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -16,8 +19,8 @@ jobs:
       - name: Build and push image
         run: |
           docker build -t estuda-app .
-          docker tag estuda-app:latest ${{ vars.DOCKERHUB_NAME }}/estuda-app:latest
-          docker push ${{ vars.DOCKERHUB_NAME }}/estuda-app:latest
+          docker tag estuda-app:latest ${{ vars.DOCKERHUB_USERNAME }}/estuda-app:latest
+          docker push ${{ vars.DOCKERHUB_USERNAME }}/estuda-app:latest
 
       # - name: Login to Google Cloud Container Registry (GCR)
       #   uses: google/cloud-sdk@v4
