--- a/k8s/database.yaml
+++ b/k8s/database.yaml
@@ -17,11 +17,55 @@ spec:
         image: mysql:8.0
         ports:
           - containerPort: 3306
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef: # Inicio da definição de que o valor da variável de ambiente será buscado em um Secret, através de uma chave
+              name: estuda-secret # Nome do Secret que contém o valor da variável de ambiente que será usada no Pod
+              key: password # Nome da chave do campo do Secret que contém o valor da variável 
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
-        command: ["mysqld", "--default-character-set=utf8"]
       volumes:
       - name: mysql-persistent-storage
         persistentVolumeClaim:
-          claimName: mysql-pvc
+          claimName: mysql-pv-claim
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+spec:
+  ports:
+  - port: 3306
+  selector:
+    app: estuda-mysql
+
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mysql-pv-volume
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 20Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/mnt/data"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
