remove comment of terraform

--- a/.github/workflows/gitaction.yaml
+++ b/.github/workflows/gitaction.yaml
@@ -24,9 +24,10 @@ jobs:
           docker tag estuda-app:latest ${{ vars.DOCKERHUB_USERNAME }}/estuda-app:latest
           docker push ${{ vars.DOCKERHUB_USERNAME }}/estuda-app:latest
 
-      # - name: Execute Terraform script
-      #   run: |
-      #     terraform init -reconfigure \
-      #       -working-directory=. \
-      #       -input=false
-      #     terraform apply -auto-approve
+      - name: Execute Terraform script
+        run: |
+          cd terraform
+          terraform init -reconfigure \
+            -working-directory=. \
+            -input=false
+          terraform apply -auto-approve
